RESOLVED FIXED54288
WebKit2: No icon shown for <input type=file>
https://bugs.webkit.org/show_bug.cgi?id=54288
Summary WebKit2: No icon shown for <input type=file>
Adam Roben (:aroben)
Reported 2011-02-11 08:49:01 PST
To reproduce: 1. Go to data:text/html,<input type=file> 2. Choose a file No icon is shown for the file!
Attachments
Patch (1.79 KB, patch)
2011-03-13 19:43 PDT, Sam Weinig
darin: review+
Adam Roben (:aroben)
Comment 1 2011-02-11 08:49:38 PST
I think this is happening because WebChromeClient::chooseIconForFiles is unimplemented. (It looks like a lot of other WebChromeClient functions are unimplemented as well; I wonder if we have bugs for all of them?)
Adam Roben (:aroben)
Comment 2 2011-02-11 08:50:05 PST
Sam Weinig
Comment 3 2011-03-13 19:43:06 PDT
Sam Weinig
Comment 4 2011-03-14 09:47:34 PDT
Landed in r81032.
Note You need to log in before you can comment on or make changes to this bug.