WebKit2: No icon shown for <input type=file> <rdar://problem/8988982> https://bugs.webkit.org/show_bug.cgi?id=54288

Reviewed by Darin Adler.

* WebProcess/WebCoreSupport/WebChromeClient.cpp:
(WebKit::WebChromeClient::chooseIconForFiles):
Add implementation for chooseIconForFiles which calls down to Icon::createIconForFiles.



git-svn-id: svn://svn.chromium.org/blink/trunk@81032 bbb929c8-8fbe-4397-9dbb-9b2b20218538